fix: removed horizontal scroll

--- a/HM_*/style.css
+++ b/HM_*/style.css
@@ -5,6 +5,7 @@
 header{
     width: 100%;
     padding: 2% 13%;
+    box-sizing: border-box;
 }
 main{
     width: 100%;
